tests/good/syntax/079-line-comment.clap
val x = 42 ** miaou

