tests/bad/interpret/004-undefined-variable.clap
val my_var = 42
val my_other_var = my_varr

